push logic function

--- a/main.ipynb
+++ b/main.ipynb
@@ -193,8 +193,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "map_background = {'Low':1 , 'Medium':2, 'High':3}\n",
-    "df['background_app_usage_level'] = df['background_app_usage_level'].replace('Low', 1)\n"
+    "df['signal_strength_avg'] = df['signal_strength_avg'].replace({\n",
+    "    'Low' : 0,\n",
+    "    'Medium' : 1,\n",
+    "    'High' : 2\n",
+    "})\n",
+    "df['charging_habit_score'] = df['charging_habit_score'].replace({\n",
+    "    'Poor' : 0,\n",
+    "    'Moderate' : 1,\n",
+    "    'Good' : 2\n",
+    "})\n",
+    "df['recommended_action'] = df['recommended_action'].replace({\n",
+    "    'Change Phone' : 0,\n",
+    "    'Replace Battery' : 1,\n",
+    "    'Keep Using' : 2\n",
+    "})"
    ]
   },
   {
@@ -230,12 +243,117 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "20a74b87",
+   "metadata": {},
+   "source": [
+    "# MODUL B | DATA CLASSIFICATION LINEAR REGRESION\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57d6666c",
+   "metadata": {},
+   "source": [
+    "train data split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9d46904",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_data = df.sample(frac=0.2, random_state=42)\n",
+    "train_data = df.drop(test_data.index)\n",
+    "\n",
+    "X_train = train_data.drop(columns=['current_battery_health_percent', 'recommended_action'])\n",
+    "X_test = test_data.drop(columns=['current_battery_health_percent', 'recommended_action'])\n",
+    "\n",
+    "y_test_bh = test_data['current_battery_health_percent']\n",
+    "y_train_bh = train_data['current_battery_health_percent']\n",
+    "\n",
+    "y_test_ra = test_data['recommended_action']\n",
+    "y_train_ra = train_data['recommended_action']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9df4707",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"Dimension dari data y test bh {y_test_bh.shape}\")\n",
+    "print(f\"Dimension dari data y train bh {y_train_bh.shape}\")\n",
+    "print(f\"Dimension dari data y test ra {y_test_ra.shape}\")\n",
+    "print(f\"Dimension dari data y test ra {y_train_ra.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58a474e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_tr_std = X_train.std()\n",
+    "x_tr_mean = X_train.mean()\n",
+    "X_train = (X_train - x_tr_mean) / x_tr_std\n",
+    "X_test = (X_test - x_tr_mean) / x_tr_std"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "303d7944",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class LinearRegresion:\n",
+    "    def __init__(self):\n",
+    "        self.beta = None\n",
+    "    \n",
+    "    def fit(self, x_tr, y_tr):\n",
+    "        x_tr_b = np.column_stack([np.ones(x_tr.shape[0]), x_tr])\n",
+    "        b = np.linalg.inv(x_tr_b.T @ x_tr_b) @ x_tr_b.T @ y_tr\n",
+    "        print(f'beta adalah {b}')\n",
+    "        self.beta = b\n",
+    "        \n",
+    "    def predict(self, x):\n",
+    "        x_b = np.column_stack([np.ones(x.shape[0]), x]) \n",
+    "        return x_b @ self.beta "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "714281d5",
+   "metadata": {},
+   "source": [
+    "TRAIN DATA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f11b0f9e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = LinearRegresion()\n",
+    "model.fit(X_train, y_train_bh)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8555560d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.predict(X_test)"
+   ]
   }
  ],
  "metadata": {
@@ -254,7 +372,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.1"
   }
  },
  "nbformat": 4,
