--- a/main.ipynb
+++ b/main.ipynb
@@ -323,7 +323,7 @@
     "        \n",
     "    def predict(self, x):\n",
     "        x_b = np.column_stack([np.ones(x.shape[0]), x]) \n",
-    "        return x_b @ self.beta "
+    "        return x_b @ self.beta"
    ]
   },
   {
@@ -352,7 +352,170 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.predict(X_test)"
+    "pred = model.predict(X_test)\n",
+    "pred_1 = model.predict(X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0e8fbe9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def confussion(y,y_pred):\n",
+    "    labels = ['Change Phone','Keep Using','Replace Battery']\n",
+    "    n = len(labels)\n",
+    "    cm = np.zeros([n,n], dtype=int)\n",
+    "\n",
+    "    akurasi = np.mean(y.values==y_pred)\n",
+    "    print(f'Akurasi : {akurasi:.3f}')\n",
+    "\n",
+    "    for a, p in zip(y,y_pred):\n",
+    "        cm[a][p] += 1\n",
+    "\n",
+    "    for i in range(n):\n",
+    "        tp = cm[i,i].sum()\n",
+    "        fp = cm[:,i].sum() - tp\n",
+    "        fn = cm[i,:].sum() - tp\n",
+    "\n",
+    "        presicion = tp / (tp + fp) if (tp + fp) > 0 else 0\n",
+    "        recall = tp / (tp + fn) if (tp + fn) > 0 else 0\n",
+    "\n",
+    "        print(f'{labels[i]} : presicion = [{presicion:.3f}], recall = [{recall:.3f}]')\n",
+    "\n",
+    "    plt.figure(figsize=(15,10))\n",
+    "    sns.heatmap(cm, annot=True, fmt='d', cmap='coolwarm', xticklabels=labels, yticklabels=labels)\n",
+    "    plt.xlabel('Prediksi')\n",
+    "    plt.ylabel('Actual')\n",
+    "    plt.title('Confusion Matrix')\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b22c49db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluasi(y, y_pred):\n",
+    "    r2 = 1 - (np.sum((y - y_pred)**2)) / (np.sum((y-y.mean())**2))\n",
+    "    mae = np.mean(np.abs(y-y_pred))\n",
+    "    mse = np.mean((y-y_pred)**2)\n",
+    "    rmse = np.sqrt(mse)\n",
+    "    print(f'R2 : {r2}')\n",
+    "    print(f'MAE : {mae}')\n",
+    "    print(f'MSE : {mse}')\n",
+    "    print(f'RMSE : {rmse}')\n",
+    "    print(f'Range Battery Health (BH): {y.min()}-{y.max()} ') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "273b0425",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evaluasi(y_test_bh, pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c26a214",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evaluasi(y_train_bh, pred_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ecb1d7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mapping(y_pred):\n",
+    "    label = []\n",
+    "    for i in y_pred:\n",
+    "        if i >= 75: # Jika hasil prediksi diatas 75%\n",
+    "            label.append(2) # Labelnya keep using\n",
+    "        elif i >= 50 and i <= 74: # Jika berada di rentang 50-74%\n",
+    "            label.append(1) #Labelnya Replace Battery\n",
+    "        else: # Jika Hasil prediksi dibawah 50%\n",
+    "            label.append(0) #Labelnya Change phone\n",
+    "\n",
+    "    return label #Mengembalikan "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de261016",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_act_tr_pred = mapping(pred)\n",
+    "y_act_te_pred = mapping(pred_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b07dac12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "confussion(y_test_ra, y_act_tr_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6feb6808",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_regresi(y, y_pred):\n",
+    "    plt.scatter(x=y, y=y_pred)\n",
+    "    plt.plot([y.min(), y.max()], [y.min(), y.max()], '--r')\n",
+    "    plt.xlabel('Actual Battery Health')\n",
+    "    plt.ylabel('Predicted Battery Health')\n",
+    "    plt.show()\n",
+    "\n",
+    "    residual = y - y_pred\n",
+    "\n",
+    "    plt.scatter(x=y_pred, y=residual)\n",
+    "    plt.axhline(0, linestyle='--', color='red')\n",
+    "    plt.xlabel('Actual Battery Health')\n",
+    "    plt.ylabel('Predicted Battery Health')\n",
+    "    plt.show()\n",
+    "\n",
+    "    sns.histplot(data=residual)\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f62f9db9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_regresi(y_test_bh, pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b3e3250",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_regresi(y_train_bh, pred_1)"
    ]
   }
  ],
