--- a/main.ipynb
+++ b/main.ipynb
@@ -221,6 +221,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "55f7bab9",
+   "metadata": {},
+   "source": [
+    "MENENTUKAN FITUR DAN LABEL (X DAN Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bff3e6a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = [['device_age_month', 'avg_charging_per_week', 'avg_battery_temp_celcius', 'charging_habbit_score']]\n",
+    "y1 = ['current_battery_health_percent']\n",
+    "y2 = ['recommended_action']"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "f56958d7",
@@ -228,6 +248,34 @@
    "outputs": [],
    "source": [
     "x = df[[]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "440bcd8c",
+   "metadata": {},
+   "source": [
+    "# EXPLORATORY DATA ANALYS | MODUL A"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4bc6f40e",
+   "metadata": {},
+   "source": [
+    "STATISTIK DESKRIPTIF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8bae9ecd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in df.columns:\n",
+    "    sns.histplot(df[i], kde=True)\n",
+    "    plt.show()"
    ]
   },
   {
@@ -240,6 +288,62 @@
     "for i in df.columns:\n",
     "    sns.boxplot(df[i])\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4808d8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kolom = ['gaming_hours_per_week']\n",
+    "def outliers(df, kolom):\n",
+    "    for col in kolom:\n",
+    "        Q1 = df[col].quantile(0.25)\n",
+    "        Q3 = df[col].quantile(0.75)\n",
+    "\n",
+    "        IQR = Q3 - Q1\n",
+    "\n",
+    "        atas = Q3 + 1.5 * IQR\n",
+    "        bawah = Q1 + 1.5 * IQR\n",
+    "\n",
+    "        df[col] = df[col].clip(upper=18, lower=0) #Kami menggunakan metode clip\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "265e9296",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = outliers(df, kolom=kolom)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2a6adb9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for col in df.columns:\n",
+    "    sns.boxplot(df[col])\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56c06d8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(10, 8))\n",
+    "sns.heatmap(df.corr(), annot=True)\n",
+    "plt.show()"
    ]
   },
   {
@@ -307,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "303d7944",
+   "id": "3ad392d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,6 +458,18 @@
    "source": [
     "pred = model.predict(X_test)\n",
     "pred_1 = model.predict(X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25d73c29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def define_linear(age, charging, battery_temp, charging_habbit):\n",
+    "    X = np.array([[age, charging, battery_temp, charging_habbit]])\n",
+    "    return model.predict(X)[0]"
    ]
   },
   {
@@ -517,6 +633,109 @@
    "source": [
     "plot_regresi(y_train_bh, pred_1)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "970d3866",
+   "metadata": {},
+   "source": [
+    "# GUI | MODUL D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6743abc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tkinter as tk \n",
+    "from tkinter import ttk,messagebox \n",
+    "\n",
+    "class GUI:\n",
+    "    def __init__(self, root, tabCtrl):\n",
+    "        self.root = root \n",
+    "        self.root.geometry(\"550x750\")\n",
+    "        self.root.title(\"GUI PREDIKSI BATTERY HEALTH\")\n",
+    "        self.tabCtrl = tabCtrl \n",
+    "        self.bg = '#e7eaeb'\n",
+    "        self.ui_index()\n",
+    "\n",
+    "    def ui_index(self):\n",
+    "        tab1 = tk.Frame(self.tabCtrl, bg=self.bg)\n",
+    "        self.tabCtrl.add(tab1, text=\"Prediksi Battery Health\")\n",
+    "        header = tk.Frame(tab1, width=50, borderwidth=1, relief='solid')\n",
+    "        header.pack(fill='x', padx=10, pady=20)\n",
+    "\n",
+    "        tk.Label(header, text=\"CEK BATTERY HEALTH\", font=(\"Segoe UI\", 10, \"bold\")).pack(pady=20)\n",
+    "\n",
+    "        form_container = tk.Frame(tab1, bg=self.bg)\n",
+    "        form_container.pack(fill='y', padx=10, pady=20)\n",
+    "\n",
+    "        dvc_age = tk.Label(form_container, bg=self.bg, text=\"Masukan Usia Device\", font=(\"Segoe UI\", 10, \"bold\"))\n",
+    "        dvc_age.pack(pady=20)       \n",
+    "        self.entry_dvc_age = tk.Entry(form_container, width=40)\n",
+    "        self.entry_dvc_age.pack(pady=5)\n",
+    "\n",
+    "        avg_charging = tk.Label(form_container, bg=self.bg, text=\"Rata-rata Charging Tiap Mingu\", font=(\"Segoe UI\", 10, \"bold\"))\n",
+    "        avg_charging.pack(pady=20)       \n",
+    "        self.entry_avg_charging = tk.Entry(form_container, width=40)\n",
+    "        self.entry_avg_charging.pack(pady=5)\n",
+    "\n",
+    "\n",
+    "        avg_battery_temp = tk.Label(form_container, bg=self.bg, text=\"Temperature Batterai\", font=(\"Segoe UI\", 10, \"bold\"))\n",
+    "        avg_battery_temp.pack(pady=20)       \n",
+    "        self.entry_avg_battery_temp = tk.Entry(form_container, width=40)\n",
+    "        self.entry_avg_battery_temp.pack(pady=5)\n",
+    "\n",
+    "\n",
+    "        charging_habbit = tk.Label(form_container, bg=self.bg, text=\"Charging Habit Score\", font=(\"Segoe UI\", 10, \"bold\"))\n",
+    "        charging_habbit.pack(pady=20)       \n",
+    "        self.entry_charging_habbit = tk.Entry(form_container, width=40)\n",
+    "        self.entry_charging_habbit.pack(pady=5)\n",
+    "\n",
+    "        tk.Button(tab1, width=37, text=\"SUBMIT\", bg=\"#6fd889\", fg='white', font=(\"Segoe UI\", 10, \"bold\"), relief='groove', command=self.analys).pack()\n",
+    "\n",
+    "\n",
+    "    def analys(self): \n",
+    "        age = self.entry_dvc_age.get()\n",
+    "        charging = self.entry_avg_charging.get()\n",
+    "        battery_temp = self.entry_avg_battery_temp.get()\n",
+    "        charging_habbit = self.entry_charging_habbit.get()\n",
+    "\n",
+    "        if age == \"\" or charging == \"\" or battery_temp == \"\" or charging_habbit == \"\":\n",
+    "            messagebox.showerror(\"error\", \"Mohon isi semua inputan\") \n",
+    "        else :\n",
+    "            try :\n",
+    "                kesehatan, aksi = define_linear(\n",
+    "                    age,\n",
+    "                    charging,\n",
+    "                    battery_temp,\n",
+    "                    charging_habbit\n",
+    "                )\n",
+    "\n",
+    "                messagebox.showinfo(\"Informasi Device Anda\", {kesehatan}, {aksi})\n",
+    "            except ValueError:\n",
+    "                messagebox.showerror(\"Terjadi Kesalahan Saat Memproses Data\")\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    root = tk.Tk()\n",
+    "    tabCtrl = ttk.Notebook(root)\n",
+    "    tabCtrl.pack(expand=True, fill='both')\n",
+    "    GUI(root, tabCtrl)\n",
+    "    root.mainloop()\n",
+    "    \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46223b19",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -535,7 +754,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
